--- a/.github/workflows/ci-ruby.yml
+++ b/.github/workflows/ci-ruby.yml
@@ -27,7 +27,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        target: [ 'remote-chrome-test' ]
+        target: [  'chrome-test', 'remote-chrome-test' ]
         os: [ 'ubuntu-latest', 'windows-latest'  ]
     steps:
       - name: Checkout source tree
@@ -36,7 +36,7 @@ jobs:
         uses: ./.github/actions/setup-bazel
         with:
           bazelisk-cache: true
-          disk-cache: remote-chrome-test
+          disk-cache: rb-${{ matrix.target }}
           external-cache: |
             crates: rust/Cargo.Bazel.lock
             go_sdk: WORKSPACE
@@ -71,148 +71,212 @@ jobs:
       - name: Set resolution
         if: matrix.os == 'windows-latest'
         run: Set-DisplayResolution -Width 1920 -Height 1080 -Force
-      # - uses: mxschmitt/action-tmate@v3
       - name: Run Chrome tests
         run: bazel test --cache_test_results=no --test_output=all //rb:${{ matrix.target }}
         env:
           DISPLAY: :99
 
-  # edge-test:
-  #   if: ${{ needs.check_workflow.outputs.result == 'true' || github.event_name == 'schedule' || github.event_name == 'workflow_dispatch' || contains(toJson(github.event.commits), '[run ruby]') == true }}
-  #   needs: check_workflow
-  #   runs-on: ${{ matrix.os }}
-  #   strategy:
-  #     fail-fast: false
-  #     matrix:
-  #       target: [ 'edge-test', 'remote-edge-test' ]
-  #       os: [ 'windows-latest' ]
-  #   steps:
-  #     - name: Checkout source tree
-  #       uses: actions/checkout@v3
-  #     - name: Setup Java
-  #       uses: actions/setup-java@v3
-  #       with:
-  #         java-version: 11
-  #         distribution: 'temurin'
-  #     - name: Cache Bazel artifacts
-  #       uses: ./.github/actions/cache-bazel
-  #       with:
-  #         workflow: ruby
-  #         key: ${{ matrix.target }}
-  #     - name: Setup Edge
-  #       uses: browser-actions/setup-edge@latest
-  #       with:
-  #         edge-version: stable
-  #     - name: Run Edge tests
-  #       uses: ./.github/actions/bazel
-  #       with:
-  #         command: test --cache_test_results=no --test_output=all //rb:${{ matrix.target }}
-  #         attempts: 3
+  edge-test:
+    # if: ${{ needs.check_workflow.outputs.result == 'true' || github.event_name == 'schedule' || github.event_name == 'workflow_dispatch' || contains(toJson(github.event.commits), '[run ruby]') == true }}
+    # needs: check_workflow
+    runs-on: ${{ matrix.os }}
+    strategy:
+      fail-fast: false
+      matrix:
+        target: [ 'edge-test', 'remote-edge-test' ]
+        os: [ 'windows-latest' ]
+    steps:
+      - name: Checkout source tree
+        uses: actions/checkout@v3
+      - name: Setup Java
+        uses: actions/setup-java@v3
+        with:
+          java-version: 11
+          distribution: 'temurin'
+      - name: Setup Bazel
+        uses: ./.github/actions/setup-bazel
+        with:
+          bazelisk-cache: true
+          disk-cache: rb-${{ matrix.target }}
+          external-cache: |
+            crates: rust/Cargo.Bazel.lock
+            go_sdk: WORKSPACE
+            nodejs_*: WORKSPACE
+            npm: package-lock.json
+            pypi__pip: py/requirements_lock.txt
+            python_3_*: WORKSPACE
+            remote_java_tools: WORKSPACE
+            remotejdk11_*: WORKSPACE
+            rules_ruby_dist: rb/ruby_version.bzl
+            rules_rust: WORKSPACE
+            rust_*_tools: WORKSPACE
+          repository-cache: true
+      - name: Setup Edge
+        uses: browser-actions/setup-edge@latest
+        with:
+          edge-version: stable
+      - name: Run Edge tests
+        uses: ./.github/actions/bazel
+        with:
+          command: test --cache_test_results=no --test_output=all //rb:${{ matrix.target }}
+          attempts: 3
 
-  # firefox-test:
-  #   if: ${{ needs.check_workflow.outputs.result == 'true' || github.event_name == 'schedule' || github.event_name == 'workflow_dispatch' || contains(toJson(github.event.commits), '[run ruby]') == true }}
-  #   needs: check_workflow
-  #   runs-on: ${{ matrix.os }}
-  #   strategy:
-  #     fail-fast: false
-  #     matrix:
-  #       target: [ 'firefox-test', 'remote-firefox-test' ]
-  #       os: [ 'ubuntu-latest', 'windows-latest' ]
-  #   steps:
-  #     - name: Checkout source tree
-  #       uses: actions/checkout@v3
-  #     - name: Setup Java
-  #       uses: actions/setup-java@v3
-  #       with:
-  #         java-version: 11
-  #         distribution: 'temurin'
-  #     - name: Cache Bazel artifacts
-  #       uses: ./.github/actions/cache-bazel
-  #       with:
-  #         workflow: ruby
-  #         key: ${{ matrix.target }}
-  #     - name: Setup Fluxbox
-  #       if: matrix.os == 'ubuntu-latest'
-  #       run: sudo apt-get -y install fluxbox
-  #     - name: Setup Firefox
-  #       uses: abhi1693/setup-browser@v0.3.4
-  #       with:
-  #         browser: firefox
-  #         version: latest
-  #     - name: Start XVFB
-  #       if: matrix.os == 'ubuntu-latest'
-  #       run: Xvfb :99 &
-  #     - name: Start Fluxbox
-  #       if: matrix.os == 'ubuntu-latest'
-  #       run: fluxbox -display :99 &
-  #     - name: Set resolution
-  #       if: matrix.os == 'windows-latest'
-  #       run: Set-DisplayResolution -Width 1920 -Height 1080 -Force
-  #     - name: Run Firefox tests
-  #       uses: ./.github/actions/bazel
-  #       with:
-  #         command: test --cache_test_results=no --test_output=all //rb:${{ matrix.target }}
-  #         attempts: 3
-  #       env:
-  #         DISPLAY: :99
+  firefox-test:
+    # if: ${{ needs.check_workflow.outputs.result == 'true' || github.event_name == 'schedule' || github.event_name == 'workflow_dispatch' || contains(toJson(github.event.commits), '[run ruby]') == true }}
+    # needs: check_workflow
+    runs-on: ${{ matrix.os }}
+    strategy:
+      fail-fast: false
+      matrix:
+        target: [ 'firefox-test', 'remote-firefox-test' ]
+        os: [ 'ubuntu-latest', 'windows-latest' ]
+    steps:
+      - name: Checkout source tree
+        uses: actions/checkout@v3
+      - name: Setup Java
+        uses: actions/setup-java@v3
+        with:
+          java-version: 11
+          distribution: 'temurin'
+      - name: Setup Bazel
+        uses: ./.github/actions/setup-bazel
+        with:
+          bazelisk-cache: true
+          disk-cache: rb-${{ matrix.target }}
+          external-cache: |
+            crates: rust/Cargo.Bazel.lock
+            go_sdk: WORKSPACE
+            nodejs_*: WORKSPACE
+            npm: package-lock.json
+            pypi__pip: py/requirements_lock.txt
+            python_3_*: WORKSPACE
+            remote_java_tools: WORKSPACE
+            remotejdk11_*: WORKSPACE
+            rules_ruby_dist: rb/ruby_version.bzl
+            rules_rust: WORKSPACE
+            rust_*_tools: WORKSPACE
+          repository-cache: true
+      - name: Setup Fluxbox
+        if: matrix.os == 'ubuntu-latest'
+        run: sudo apt-get -y install fluxbox
+      - name: Setup Firefox
+        uses: abhi1693/setup-browser@v0.3.4
+        with:
+          browser: firefox
+          version: latest
+      - name: Start XVFB
+        if: matrix.os == 'ubuntu-latest'
+        run: Xvfb :99 &
+      - name: Start Fluxbox
+        if: matrix.os == 'ubuntu-latest'
+        run: fluxbox -display :99 &
+      - name: Set resolution
+        if: matrix.os == 'windows-latest'
+        run: Set-DisplayResolution -Width 1920 -Height 1080 -Force
+      - name: Run Firefox tests
+        uses: ./.github/actions/bazel
+        with:
+          command: test --cache_test_results=no --test_output=all //rb:${{ matrix.target }}
+          attempts: 3
+        env:
+          DISPLAY: :99
 
-  # docs:
-  #   if: ${{ needs.check_workflow.outputs.result == 'true' || github.event_name == 'schedule' || github.event_name == 'workflow_dispatch' || contains(toJson(github.event.commits), '[run ruby]') == true }}
-  #   needs: check_workflow
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #     - name: Checkout source tree
-  #       uses: actions/checkout@v3
-  #     - name: Cache Bazel artifacts
-  #       uses: ./.github/actions/cache-bazel
-  #       with:
-  #         workflow: ruby
-  #         key: docs
-  #     - name: Run docs tests
-  #       uses: ./.github/actions/bazel
-  #       with:
-  #         command: run //rb:docs
+  docs:
+    # if: ${{ needs.check_workflow.outputs.result == 'true' || github.event_name == 'schedule' || github.event_name == 'workflow_dispatch' || contains(toJson(github.event.commits), '[run ruby]') == true }}
+    # needs: check_workflow
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout source tree
+        uses: actions/checkout@v3
+      - name: Setup Bazel
+        uses: ./.github/actions/setup-bazel
+        with:
+          bazelisk-cache: true
+          disk-cache: rb-docs
+          external-cache: |
+            crates: rust/Cargo.Bazel.lock
+            go_sdk: WORKSPACE
+            nodejs_*: WORKSPACE
+            npm: package-lock.json
+            pypi__pip: py/requirements_lock.txt
+            python_3_*: WORKSPACE
+            remote_java_tools: WORKSPACE
+            remotejdk11_*: WORKSPACE
+            rules_ruby_dist: rb/ruby_version.bzl
+            rules_rust: WORKSPACE
+            rust_*_tools: WORKSPACE
+          repository-cache: true
+      - name: Run docs tests
+        uses: ./.github/actions/bazel
+        with:
+          command: run //rb:docs
 
-  # lint:
-  #   if: ${{ needs.check_workflow.outputs.result == 'true' || github.event_name == 'schedule' || github.event_name == 'workflow_dispatch' || contains(toJson(github.event.commits), '[run ruby]') == true }}
-  #   needs: check_workflow
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #     - name: Checkout source tree
-  #       uses: actions/checkout@v3
-  #     - name: Cache Bazel artifacts
-  #       uses: ./.github/actions/cache-bazel
-  #       with:
-  #         workflow: ruby
-  #         key: lint
-  #     - name: Run lint tests
-  #       uses: ./.github/actions/bazel
-  #       with:
-  #         command: run //rb:lint
+  lint:
+    # if: ${{ needs.check_workflow.outputs.result == 'true' || github.event_name == 'schedule' || github.event_name == 'workflow_dispatch' || contains(toJson(github.event.commits), '[run ruby]') == true }}
+    # needs: check_workflow
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout source tree
+        uses: actions/checkout@v3
+      - name: Setup Bazel
+        uses: ./.github/actions/setup-bazel
+        with:
+          bazelisk-cache: true
+          disk-cache: rb-lint
+          external-cache: |
+            crates: rust/Cargo.Bazel.lock
+            go_sdk: WORKSPACE
+            nodejs_*: WORKSPACE
+            npm: package-lock.json
+            pypi__pip: py/requirements_lock.txt
+            python_3_*: WORKSPACE
+            remote_java_tools: WORKSPACE
+            remotejdk11_*: WORKSPACE
+            rules_ruby_dist: rb/ruby_version.bzl
+            rules_rust: WORKSPACE
+            rust_*_tools: WORKSPACE
+          repository-cache: true
+      - name: Run lint tests
+        uses: ./.github/actions/bazel
+        with:
+          command: run //rb:lint
 
-  # unit-test:
-  #   if: ${{ needs.check_workflow.outputs.result == 'true' || github.event_name == 'schedule' || github.event_name == 'workflow_dispatch' || contains(toJson(github.event.commits), '[run ruby]') == true }}
-  #   needs: check_workflow
-  #   runs-on: ${{ matrix.os }}
-  #   strategy:
-  #     fail-fast: false
-  #     matrix:
-  #       ruby: [ '2.7.6', '3.1.2', 'jruby-9.4.0.0', 'truffleruby-22.3.0' ]
-  #       os: ['ubuntu-latest']
-  #       include:
-  #         - ruby: 2.7.6
-  #           os: windows-latest
-  #   steps:
-  #     - name: Checkout source tree
-  #       uses: actions/checkout@v3
-  #     - name: Cache Bazel artifacts
-  #       uses: ./.github/actions/cache-bazel
-  #       with:
-  #         workflow: ruby
-  #         key: unit-test-${{ matrix.ruby }}
-  #     - name: Set Ruby version to ${{ matrix.ruby }}
-  #       run: echo 'RUBY_VERSION = "${{ matrix.ruby }}"' > rb/ruby_version.bzl
-  #     - name: Run unit tests
-  #       uses: ./.github/actions/bazel
-  #       with:
-  #         command: test --cache_test_results=no --test_output=all //rb:unit-test
+  unit-test:
+    # if: ${{ needs.check_workflow.outputs.result == 'true' || github.event_name == 'schedule' || github.event_name == 'workflow_dispatch' || contains(toJson(github.event.commits), '[run ruby]') == true }}
+    # needs: check_workflow
+    runs-on: ${{ matrix.os }}
+    strategy:
+      fail-fast: false
+      matrix:
+        ruby: [ '2.7.6', '3.1.2', 'jruby-9.4.0.0', 'truffleruby-22.3.0' ]
+        os: ['ubuntu-latest']
+        include:
+          - ruby: 2.7.6
+            os: windows-latest
+    steps:
+      - name: Checkout source tree
+        uses: actions/checkout@v3
+      - name: Set Ruby version to ${{ matrix.ruby }}
+        run: echo 'RUBY_VERSION = "${{ matrix.ruby }}"' > rb/ruby_version.bzl
+      - name: Setup Bazel
+        uses: ./.github/actions/setup-bazel
+        with:
+          bazelisk-cache: true
+          disk-cache: rb-unit-test-${{ matrix.ruby }}
+          external-cache: |
+            crates: rust/Cargo.Bazel.lock
+            go_sdk: WORKSPACE
+            nodejs_*: WORKSPACE
+            npm: package-lock.json
+            pypi__pip: py/requirements_lock.txt
+            python_3_*: WORKSPACE
+            remote_java_tools: WORKSPACE
+            remotejdk11_*: WORKSPACE
+            rules_ruby_dist: rb/ruby_version.bzl
+            rules_rust: WORKSPACE
+            rust_*_tools: WORKSPACE
+          repository-cache: true
+      - name: Run unit tests
+        uses: ./.github/actions/bazel
+        with:
+          command: test --cache_test_results=no --test_output=all //rb:unit-test
