--- a/.github/workflows/ci-dotnet.yml
+++ b/.github/workflows/ci-dotnet.yml
@@ -11,16 +11,16 @@ on:
   pull_request:
 
 jobs:
-  check_workflow:
-    permissions:
-      contents: none
-    uses: ./.github/workflows/should-workflow-run.yml
-    with:
-      bazel-target-prefix: '//dotnet'
+  # check_workflow:
+  #   permissions:
+  #     contents: none
+  #   uses: ./.github/workflows/should-workflow-run.yml
+  #   with:
+  #     bazel-target-prefix: '//dotnet'
 
   browser:
-    if: ${{ needs.check_workflow.outputs.result == 'true' || github.event_name == 'schedule' || github.event_name == 'workflow_dispatch' || contains(toJson(github.event.commits), '[dotnet]') == true }}
-    needs: check_workflow
+    # if: ${{ needs.check_workflow.outputs.result == 'true' || github.event_name == 'schedule' || github.event_name == 'workflow_dispatch' || contains(toJson(github.event.commits), '[dotnet]') == true }}
+    # needs: check_workflow
     runs-on: 'windows-latest'
     strategy:
       fail-fast: false
@@ -40,15 +40,26 @@ jobs:
         with:
           java-version: 11
           distribution: 'temurin'
-      - name: Cache Bazel artifacts
-        uses: ./.github/actions/cache-bazel
+      - name: Setup Bazel
+        uses: ./.github/actions/setup-bazel
         with:
-          workflow: dotnet
-          key: ${{ matrix.driver }}-${{ matrix.framework }}
+          bazelisk-cache: true
+          disk-cache: dotnet-${{ matrix.driver }}-${{ matrix.framework }}
+          external-cache: |
+            crates: rust/Cargo.Bazel.lock
+            go_sdk: WORKSPACE
+            nodejs_*: WORKSPACE
+            npm: package-lock.json
+            pypi__pip: py/requirements_lock.txt
+            python_3_*: WORKSPACE
+            remote_java_tools: WORKSPACE
+            remotejdk11_*: WORKSPACE
+            rules_ruby_dist: rb/ruby_version.bzl
+            rules_rust: WORKSPACE
+            rust_*_tools: WORKSPACE
+          repository-cache: true
       - name: Setup dotnet tests
-        uses: ./.github/actions/bazel
-        with:
-          command: build //dotnet/test/common:chrome
+        run: bazel build //dotnet/test/common:chrome
       - name: Run ${{ matrix.driver }} tests
         working-directory: dotnet
         run: dotnet test test/common/WebDriver.Common.Tests.csproj --framework ${{ matrix.framework }}
