--- a/.github/workflows/ci-java.yml
+++ b/.github/workflows/ci-java.yml
@@ -59,6 +59,7 @@ jobs:
   small_tests:
     # if: ${{ needs.check_workflow.outputs.result == 'true' || github.event_name == 'schedule' || github.event_name == 'workflow_dispatch' || contains(toJson(github.event.commits), '[run java]') == true }}
     # needs: [ check_workflow, build ]
+    needs: [ build ]
     runs-on: ubuntu-latest
     steps:
       - name: Checkout source tree
@@ -99,6 +100,7 @@ jobs:
   medium_tests:
     # if: ${{ needs.check_workflow.outputs.result == 'true' || github.event_name == 'schedule' || github.event_name == 'workflow_dispatch' || contains(toJson(github.event.commits), '[run java]') == true }}
     # needs: [ check_workflow, small_tests ]
+    needs: [ small_tests ]
     runs-on: ubuntu-latest
     steps:
       - name: Checkout source tree
@@ -134,6 +136,7 @@ jobs:
   lint:
     # if: ${{ needs.check_workflow.outputs.result == 'true' || github.event_name == 'schedule' || github.event_name == 'workflow_dispatch' || contains(toJson(github.event.commits), '[run java]') == true }}
     # needs: [ check_workflow, build ]
+    needs: [ build ]
     runs-on: ubuntu-latest
     steps:
       - name: Checkout source tree
