--- a/.github/workflows/ci-javascript.yml
+++ b/.github/workflows/ci-javascript.yml
@@ -13,16 +13,16 @@ on:
   pull_request:
 
 jobs:
-  check_workflow:
-    permissions:
-      contents: none
-    uses: ./.github/workflows/should-workflow-run.yml
-    with:
-      bazel-target-prefix: '//javascript'
+  # check_workflow:
+  #   permissions:
+  #     contents: none
+  #   uses: ./.github/workflows/should-workflow-run.yml
+  #   with:
+  #     bazel-target-prefix: '//javascript'
 
   node_tests:
-    if: ${{ needs.check_workflow.outputs.result == 'true' || github.event_name == 'schedule' || github.event_name == 'workflow_dispatch' || contains(toJson(github.event.commits), '[js]') == true }}
-    needs: check_workflow
+    # if: ${{ needs.check_workflow.outputs.result == 'true' || github.event_name == 'schedule' || github.event_name == 'workflow_dispatch' || contains(toJson(github.event.commits), '[js]') == true }}
+    # needs: check_workflow
     runs-on: ubuntu-latest
     strategy:
       fail-fast: false
@@ -33,16 +33,24 @@ jobs:
     steps:
       - name: Checkout source tree
         uses: actions/checkout@v3
-      - name: Cache Bazel artifacts
-        uses: actions/cache@v3
+      - name: Setup Bazel
+        uses: ./.github/actions/setup-bazel
         with:
-          path: |
-            ~/.cache/bazel-disk
-            ~/.cache/bazel-repo
-          key: ${{ runner.os }}-bazel-node-tests-${{ hashFiles('**/BUILD.bazel') }}
-          restore-keys: |
-            ${{ runner.os }}-bazel-node-tests-
-            ${{ runner.os }}-bazel-build-
+          bazelisk-cache: true
+          disk-cache: node
+          external-cache: |
+            crates: rust/Cargo.Bazel.lock
+            go_sdk: WORKSPACE
+            nodejs_*: WORKSPACE
+            npm: package-lock.json
+            pypi__pip: py/requirements_lock.txt
+            python_3_*: WORKSPACE
+            remote_java_tools: WORKSPACE
+            remotejdk11_*: WORKSPACE
+            rules_ruby_dist: rb/ruby_version.bzl
+            rules_rust: WORKSPACE
+            rust_*_tools: WORKSPACE
+          repository-cache: true
       - name: Setup Node.js
         uses: actions/setup-node@v1
         with:
@@ -70,30 +78,36 @@ jobs:
       - name: Start XVFB
         run: Xvfb :99 &
       - name: Run JavaScript tests
-        uses: ./.github/actions/bazel-test
-        with:
-          query: //javascript/node/selenium-webdriver:tests
-          attempts: 3
+        run: bazel test --flaky_test_attempts 3 //javascript/node/selenium-webdriver:tests
         env:
           DISPLAY: :99
           SELENIUM_BROWSER: ${{ matrix.browser }}
 
   firefox_atom_tests:
-    if: ${{ needs.check_workflow.outputs.result == 'true' || github.event_name == 'schedule' || github.event_name == 'workflow_dispatch' || contains(toJson(github.event.commits), '[run javascript]') == true }}
-    needs: check_workflow
+    # if: ${{ needs.check_workflow.outputs.result == 'true' || github.event_name == 'schedule' || github.event_name == 'workflow_dispatch' || contains(toJson(github.event.commits), '[run javascript]') == true }}
+    # needs: check_workflow
     runs-on: ubuntu-latest
     steps:
       - name: Checkout source tree
         uses: actions/checkout@v3
-      - name: Cache Bazel artifacts
-        uses: actions/cache@v3
+      - name: Setup Bazel
+        uses: ./.github/actions/setup-bazel
         with:
-          path: |
-            ~/.cache/bazel-disk
-            ~/.cache/bazel-repo
-          key: ${{ runner.os }}-bazel-atom-firefox-tests-${{ hashFiles('**/BUILD.bazel') }}
-          restore-keys: |
-            ${{ runner.os }}-bazel-atom-firefox-tests-
+          bazelisk-cache: true
+          disk-cache: atoms
+          external-cache: |
+            crates: rust/Cargo.Bazel.lock
+            go_sdk: WORKSPACE
+            nodejs_*: WORKSPACE
+            npm: package-lock.json
+            pypi__pip: py/requirements_lock.txt
+            python_3_*: WORKSPACE
+            remote_java_tools: WORKSPACE
+            remotejdk11_*: WORKSPACE
+            rules_ruby_dist: rb/ruby_version.bzl
+            rules_rust: WORKSPACE
+            rust_*_tools: WORKSPACE
+          repository-cache: true
       - name: Setup Java
         uses: actions/setup-java@v3
         with:
@@ -111,9 +125,7 @@ jobs:
       - name: Start Fluxbox
         run: fluxbox -display :99 &
       - name: Run atom tests on Firefox
-        uses: ./.github/actions/bazel
-        with:
-          command: test --test_tag_filters=firefox //javascript/atoms/... //javascript/selenium-atoms/... //javascript/webdriver/...
+        run: bazel test --test_tag_filters=firefox //javascript/atoms/... //javascript/selenium-atoms/... //javascript/webdriver/...
         env:
           DISPLAY: :99
           SELENIUM_BROWSER: firefox
@@ -121,8 +133,8 @@ jobs:
   # As soon as this gets merged https://github.com/facebook/jest/pull/9351, we should upgrade Jest and
   # run bazel test javascript/grid-ui:test for these tests
   grid_ui_unit_tests:
-    if: ${{ needs.check_workflow.outputs.result == 'true' || github.event_name == 'schedule' || github.event_name == 'workflow_dispatch' || contains(toJson(github.event.commits), '[run javascript]') == true }}
-    needs: check_workflow
+    # if: ${{ needs.check_workflow.outputs.result == 'true' || github.event_name == 'schedule' || github.event_name == 'workflow_dispatch' || contains(toJson(github.event.commits), '[run javascript]') == true }}
+    # needs: check_workflow
     runs-on: ubuntu-latest
     steps:
       - name: Checkout source tree
