--- a/.github/actions/setup-bazel/package.json
+++ b/.github/actions/setup-bazel/package.json
@@ -15,6 +15,7 @@
     "@actions/github": "^5.1.1",
     "@actions/glob": "^0.3.0",
     "@actions/io": "^1.1.2",
-    "@vercel/ncc": "^0.36.0"
+    "@vercel/ncc": "^0.36.0",
+    "get-folder-size": "^2.0.1"
   }
 }
